adjusted cl image tag to fix stretching

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -9,30 +9,24 @@
 .avatar-bordered {
   width: 40px;
   border-radius: 50%;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   border: white 1px solid;
 }
 .avatar-square {
   width: 40px;
   border-radius: 0px;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   border: white 1px solid;
 }
 
 .avatar-main {
-  width: 75px;
-  height: 75px;
   border-radius: 50%;
 }
 
 .avatar-profile {
   border-radius: 50%;
-  height: 72px;
-  width: 72px;
 }
 
 .avatar-leaderboard {
-  width: 60px;
-  height: 60px;
   border-radius: 50%;
 }
